# c_exercise

./: CMakeLists.txt  README.md  main.c
basic_exercises/: exercise_1.c  exercise_2.c  exercise_4.c
exercise_helpers/: exercise_helper.c  exercise_helper.h
